--- a/Chapter 8 - Modeling Continuous Variables.ipynb
+++ b/Chapter 8 - Modeling Continuous Variables.ipynb
@@ -2354,7 +2354,7 @@
     "result2.replace = True\n",
     "linear1.output.casout = result2\n",
     "linear1.output.pred  = 'Predicted_MSRP'\n",
-    "linear1.output.resid = 'Residual_MSRP'\n",
+    "linear1.output.resid = 'Presidual_MSRP'\n",
     "linear1.output.lcl = 'LCL_MSRP'\n",
     "linear1.output.ucl = 'UCL_MSRP'\n",
     "linear1()"
